<resources>
    <string name="app_name">PrimeraClase</string>

    <!-- Textos de la primera actividad -->
    <string name="hello">Hola, estamos con nuestra primera app en Android</string>
    <string name="text">Texto de ejemplo</string>
    <string name="buttonSQLiteInsert">SQLite Insert</string>
    <string name="editTextSQLiteId">Id</string>
    <string name="editTextSQLiteNewValue">New Value</string>
    <string name="buttonSQLiteUpdate">SQLite Update</string>
    <string name="buttonSQLiteDelete">SQLite Delete</string>
    <string name="buttonSQLiteQuery">Query</string>
    <string name="buttonSQLiteQueryAll">Query all</string>
    <string name="buttonGoTo2">Ir a Actividad 2</string>
    <string name="buttonGoTo3">Ir a Actividad 3</string>
    <string name="buttonGoToList">Ir a List</string>
    <string name="buttonGoToCalculator">Calculadora</string>
    <string name="editText1">Content1</string>
    <string name="editText2">Content2</string>

    <!-- Textos de la segunda actividad -->
    <string name="textActivity2">Esta es la segunda actividad</string>
    <string name="activity2Button1Text">Button Left</string>
    <string name="activity2Button2Text">Button Right</string>

    <!-- Textos de la tercera actividad -->
    <string name="textActivity3">Esta es la tercera actividad</string>
    <string name="buttonGoTo4">Ir a Actividad 4</string>

    <!-- Textos de la cuarta actividad -->
    <string name="textActivity4">Esta es la cuarta actividad</string>

    <!-- Textos de la actividad calculadora -->
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>

    <string name="emptyList">The list is empty</string>

    <string name="op1">Option 1</string>
    <string name="op2">Option 2</string>

    <string name="click2">Click in Option 2</string>
    <string name="titleDialog">Dialog</string>
    <string name="messageDialog">Message</string>
    <string name="ok">Accept</string>
    <string name="cancel">Cancel</string>

    <string name="backPressed">The back button has been pressed</string>

</resources>
