<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextContent1"
        android:hint="@string/editText1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextContent2"
        android:hint="@string/editText2"/>

    <Button
        android:id="@+id/buttonGoTo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonGoTo2" />

    <Button
        android:id="@+id/buttonGoTo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonGoTo3" />

</LinearLayout>