<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewActivity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textActivity2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/parameterView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewActivity2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/activity2Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity2Button1Text" />
        <Button
            android:id="@+id/activity2Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity2Button2Text" />

    </LinearLayout>
</RelativeLayout>